--- a/arch/arm64/boot/dts/hobot/x5-evb-v2.dts
+++ b/arch/arm64/boot/dts/hobot/x5-evb-v2.dts
@@ -63,7 +63,7 @@
 		compatible = "gua,cpu-dai";
 		msg-wrapper = <&ipc_wrapper>;
 		gua,pcm-buffer-size = <0x1E000>;
-		pcm-rpmsg-channel-mapping = <0x00>, <0x00>, <0x00>, <0x00>, <0x00>;
+		pcm-rpmsg-channel-mapping = <0x00>, <0x00>, <0x00>, <0x00>, <0x00>, <0x00>;
 		status = "okay";
 	};
 
@@ -774,6 +774,7 @@ the following ports need to be deleted*/
 			sound-dai = <&es8156>;
 		};
 	};
+
 	dai-link@1 {
 		link-name = "dai-link1";
 		reg = <1>;
@@ -786,6 +787,19 @@ the following ports need to be deleted*/
 		};
 		codec {
 			sound-dai = <&es7210_0 0>;
+		};
+	};
+
+	dai-link@2 {
+		link-name = "archband-pdm-dai-link";
+		reg = <1>;
+		bitclock-master = <&arb_dai>;
+		frame-master = <&arb_dai>;
+		arb_dai: cpu {
+			sound-dai = <&archband_pdm>;
+		};
+		codec {
+			sound-dai = <&virt_codec>;
 		};
 	};
 };
