dts: evb: feat [X5-1304] Set enpin in evb board
Signed-off-by: ming.yu <ming.yu@hobot.cc>
Change-Id: I775f79f4353a404cbb292c2b881e7c726c5df48f

--- a/arch/arm64/boot/dts/hobot/x5-evb.dts
+++ b/arch/arm64/boot/dts/hobot/x5-evb.dts
@@ -193,6 +193,7 @@
 		status = "okay";
 		hpu3501-regulator {
 			master;
+			en_pin_map = <0x15>;
 			regulators {
 				vdd08_bpu_1_reg: BUCK2 {
 					regulator-name = "VCC_BPU";
