socinfo: fix [X5-1298] Use  base_board_name and ddr info to combine board_name
Signed-off-by: ming.yu <ming.yu@hobot.cc>
Change-Id: I827d8fb4c4326408d1df43febb4d88020fc3a6dd

--- a/arch/arm64/boot/dts/hobot/x5.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5.dtsi
@@ -763,7 +763,7 @@
 			ddr_size = "0";
 			ddr_part_num = "0";
 			som_name = "0";
-			base_board_name = "0";
+			base_board_name = "00000000000000000000000000000000";
 			boot_mode = "0";
 			socuid = "00000000000000000000000000000000";
 			chip_id = "00000000";
