clock: fix [X5-1547] Binding dw230 core clock to noc
Summary:
1. gdc core clock should be bind to noc
2. gdc and vse axi should be set critical, dw230 noc is depend on these
two clock
3. after gdc and vse axi clock is set to critical, dw230 qos have to use
vse core, or vse upscale, or gdc core clock to connect dw230 noc. these three
clock are binded to dw230 noc

Signed-off-by: ming.yu <ming.yu@hobot.cc>
Change-Id: I003c566cd92b8be49ca8ecfe9001c7978ba25e38

--- a/arch/arm64/boot/dts/hobot/x5.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5.dtsi
@@ -2625,10 +2625,9 @@
 		dw230_qos: dw230_qos@20510100 {
 			compatible = "d-robotics,noc_qos";
 			reg = <0x20510100 0x180>;
-			clocks-num = <2>;
-			clocks =<&hpsclks X5_CAM_VSE_AXI_CLK>,
-					<&hpsclks X5_CAM_DEWARP_AXI_CLK>;
-			clock-names ="vse_axi_clk", "dewarp_axi_clk";
+			clocks-num = <1>;
+			clocks =<&hpsclks X5_CAM_VSE_CORE_CLK>;
+			clock-names ="vse_core";
 			status = "okay";
 			ports-num = <3>;
 			ports-off = <0x0008 0x0088 0x0108>;
