rtc: hpu3501: Feat Support for RDK X5
- Enable HPU3501 RTC
- Disable CPU's built-in RTC
- Fixed the bug that HPU3501 RTC interrupt cannot be registered
- Fixed the bug that HPU3501 RTC cannot read the time correctly for the first time
- Fixed the bug that HPU3501 RTC cannot handle the 20th and 21st centuries

Signed-off-by: yaqiang.li <yaqiang.li@d-robotics.cc>

--- a/arch/arm64/boot/dts/hobot/x5-rdk.dts
+++ b/arch/arm64/boot/dts/hobot/x5-rdk.dts
@@ -110,6 +110,10 @@
 	cpu-supply = <&vdd08_cpu_reg>;
 };
 
+&rtc {
+	status = "disabled";
+};
+
 &x5_bpu_pd {
 	bpu-supply = <&vdd08_bpu_1_reg>;
 };
@@ -176,7 +180,15 @@
 				};
 			};
 		};
+		hpu3501-rtc {
+			opsel = <0>;
+			// AON_RTC_ALARM_N_1V8 - AON_GPIO_PIN3
 
+			pinctrl-names = "default";
+			pinctrl-0 = <&aon_gpio_3>;
+			interrupt-parent = <&aon_gpio_porta>;
+			interrupts = <3 IRQ_TYPE_EDGE_RISING>;
+		};
 	};
 };
 
@@ -332,7 +344,7 @@
 
 &dw_i2s0 {
 	status = "okay";
-	#sound-dai-cells = <1>;
+	//#sound-dai-cells = <1>;
 };
 
 &dw_i2s1 {
