dts: efuse: fix [X5-521] Do not binding aon-gpio7 in svb board
Summary:
   1. aon-gpio7 has been used as CSI2_PWDN_1V8, Do not binding it in efuse
node
   2. efuse power is always on in svb, we can update efuse without
binding aon-gpio7

Change-Id: Id9a7297548c8b442be6e5a3ac9fd603ba1e117ef
Signed-off-by: ming.yu <ming.yu@hobot.cc>

--- a/arch/arm64/boot/dts/hobot/x5-evb.dts
+++ b/arch/arm64/boot/dts/hobot/x5-evb.dts
@@ -750,3 +750,9 @@
 &hobot_pps {
 	status = "okay";
 };
+
+&efuse{
+	/* use aon gpio7 as efuse power */
+	pinctrl-names = "default";
+	pinctrl-0 = <&aon_gpio_7>;
+};
