firewall: fix [X5-67] Disable firewall driver
Summary:
  It may cause some problems when enable firewall, disable it now.

Signed-off-by: ming.yu <ming.yu@hobot.cc>
Change-Id: Ieb6985476335b4337cb9ac6b3cdb44adf96d549d

--- a/arch/arm64/boot/dts/hobot/x5.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5.dtsi
@@ -787,7 +787,7 @@
 			interrupt-parent = <&gic>;
 			interrupts = <GIC_SPI 7 IRQ_TYPE_LEVEL_HIGH>;
 			services = <&tee_regmap>;
-			status = "okay";
+			status = "disabled";
 			range_1: range-1 {
 				region_name = "kernel";
 				region_start_31_0       = <0x04000000>;
