dts: feat [X5-1306] Add DDR eye mode in reboot action
entry ddr eye mode command:
reboot -m eye -f

Signed-off-by: zhiwei01.li <zhiwei01.li@horizon.cc>
Change-Id: Idf224de63709063f73df29c8f2e179276ae14f33

--- a/arch/arm64/boot/dts/hobot/x5.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5.dtsi
@@ -2033,6 +2033,7 @@
 					mode-usb2 = <0x00000200>;
 					mode-uart = <0x00000300>;
 					mode-recovery = <0x00000400>;
+					mode-eye = <0x00000500>;
 				};
 
 				reboot-reason {
