feat(tcan4x5x): Add tcan4x5c driver
Signed-off-by: xin03.liu <xin03.liu@horizon.cc>

--- a/arch/arm64/boot/dts/hobot/pinmux-gpio.dtsi
+++ b/arch/arm64/boot/dts/hobot/pinmux-gpio.dtsi
@@ -196,7 +196,7 @@
 
 	lsio_gpio0_7: lsio_gpio0_7 {
 		horizon,pins = <
-			LSIO_UART1_RTS	LSIO_PINMUX_3 BIT_OFFSET30	MUX_ALT2	&pconf_input_en_3v3
+			LSIO_UART1_RTS	LSIO_PINMUX_3 BIT_OFFSET30	MUX_ALT2	&pconf_output_high
 		>;
 	};
 
