--- a/arch/arm64/configs/hobot_x5_rdk_ubuntu_defconfig
+++ b/arch/arm64/configs/hobot_x5_rdk_ubuntu_defconfig
@@ -531,6 +531,9 @@ CONFIG_MARVELL_PHY=y
 CONFIG_REALTEK_PHY=y
 CONFIG_CAN_VCAN=m
 CONFIG_CAN_SLCAN=m
+CONFIG_CAN_M_CAN=m
+CONFIG_CAN_M_CAN_PLATFORM=m
+CONFIG_CAN_M_CAN_TCAN4X5X=m
 CONFIG_CAN_MCP251X=m
 CONFIG_CAN_EMS_USB=m
 CONFIG_CAN_GS_USB=m
