feat(devmem): [X5-1362] Disable CONFIG_STRICT_DEVMEM for paddr access
Change-Id: I77899b3f65b16b7a4238be6fee1d0d1d1d9dfcb4
Signed-off-by: zhenjian.he <zhenjian.he@horizon.cc>

--- a/arch/arm64/configs/hobot_x5_soc_defconfig
+++ b/arch/arm64/configs/hobot_x5_soc_defconfig
@@ -617,6 +617,7 @@ CONFIG_BOOTPARAM_HUNG_TASK_PANIC=y
 CONFIG_DEBUG_SPINLOCK=y
 CONFIG_DEBUG_ATOMIC_SLEEP=y
 # CONFIG_FTRACE is not set
+# CONFIG_STRICT_DEVMEM is not set
 CONFIG_CORESIGHT=y
 CONFIG_CORESIGHT_LINK_AND_SINK_TMC=y
 CONFIG_CORESIGHT_CATU=y
