--- a/arch/arm64/configs/hobot_x5_soc_nand_defconfig
+++ b/arch/arm64/configs/hobot_x5_soc_nand_defconfig
@@ -579,6 +579,7 @@ CONFIG_BOOTPARAM_SOFTLOCKUP_PANIC=y
 CONFIG_BOOTPARAM_HUNG_TASK_PANIC=y
 # CONFIG_SCHED_DEBUG is not set
 # CONFIG_FTRACE is not set
+# CONFIG_STRICT_DEVMEM is not set
 CONFIG_CORESIGHT=y
 CONFIG_CORESIGHT_LINK_AND_SINK_TMC=y
 CONFIG_CORESIGHT_CATU=y
