--- a/arch/arm64/configs/hobot_x5_rdk_ubuntu_defconfig
+++ b/arch/arm64/configs/hobot_x5_rdk_ubuntu_defconfig
@@ -961,7 +961,7 @@ CONFIG_SND_USB_6FIRE=m
 CONFIG_SND_USB_HIFACE=m
 CONFIG_SND_USB_TONEPORT=m
 CONFIG_SND_SOC=y
-CONFIG_SND_DESIGNWARE_I2S=m
+CONFIG_SND_DESIGNWARE_I2S=y
 CONFIG_SND_DESIGNWARE_PCM=y
 CONFIG_SND_ARCHBAND_PDM=y
 CONFIG_SND_VIRT_CODEC=y
@@ -970,9 +970,10 @@ CONFIG_SND_SOC_WM8962=y
 CONFIG_SND_SOC_ES7210=m
 CONFIG_SND_SOC_ES8156=m
 CONFIG_SND_SOC_ES8311=m
+CONFIG_SND_SOC_ES8326=y
 CONFIG_SND_DUPLEX_CARD=m
 CONFIG_SND_HOBOT_SOUND_MACHINE=m
-CONFIG_SND_HOBOT_SOUND_DUPLEX_HOST=m
+CONFIG_SND_HOBOT_SOUND_DUPLEX_HOST=y
 CONFIG_SND_SIMPLE_CARD=m
 CONFIG_HID_BATTERY_STRENGTH=y
 CONFIG_HIDRAW=y
