--- a/arch/arm64/configs/hobot_x5_rdk_ubuntu_defconfig
+++ b/arch/arm64/configs/hobot_x5_rdk_ubuntu_defconfig
@@ -1255,8 +1255,8 @@ CONFIG_ION_HOBOT=y
 # CONFIG_ARM64_ERRATUM_858921 is not set
 CONFIG_MAILBOX=y
 CONFIG_DROBOT_LITE_MMU=y
-CONFIG_REMOTEPROC=y
-CONFIG_HOBOT_REMOTEPROC=y
+#CONFIG_REMOTEPROC=y
+#CONFIG_HOBOT_REMOTEPROC=y
 CONFIG_HOBOT_SOC_DRIVERS=y
 CONFIG_HOBOT_BPU=y
 CONFIG_BPU=m
