IMU: Adapt BMI088 IMU HAT board support
Adapted support for the BMI088 IMU HAT board. Tested accelerometer
and gyroscope functionalities, both are working correctly.

The updated driver has been tested on the following platforms and configurations:
- Platform RDK_X5 V0.1 with kernel version 6.1.83

Signed-off-by: fuhua.wang <fuhua.wang@horizon.cc>

--- a/arch/arm64/boot/dts/hobot/x5-rdk.dts
+++ b/arch/arm64/boot/dts/hobot/x5-rdk.dts
@@ -273,6 +273,19 @@
 		#sound-dai-cells = <0>;
 		status = "okay";
 	};
+
+	bmi08xa:bmi08xa@0x19 {
+		compatible = "bmi08xa";
+		reg = <0x19>;
+		pinctrl-0 = <&dsp_gpio0_12>;
+		accel_irq_gpio = <&dsp_gpio_porta 12 GPIO_ACTIVE_HIGH>;
+	};
+	bmi08xg:bmi08xg@0x69{
+		compatible = "bmi08xg";
+		reg = <0x69>;
+		pinctrl-0 = <&lsio_gpio0_2>;
+		gyro_irq_gpio = <&ls_gpio1_porta 2 GPIO_ACTIVE_HIGH>;
+	};
 };
 
 &i2c6 {
@@ -452,7 +465,7 @@
 };
 
 &dw_i2s1 {
-	status = "okay";
+	status = "disabled";
 	#sound-dai-cells = <1>;
 };
 
