--- a/arch/arm64/configs/hobot_x5_rdk_ubuntu_defconfig
+++ b/arch/arm64/configs/hobot_x5_rdk_ubuntu_defconfig
@@ -1272,6 +1272,8 @@ CONFIG_EXTCON=y
 CONFIG_EXTCON_USB_GPIO=y
 CONFIG_IIO=y
 CONFIG_IIO_SW_TRIGGER=y
+CONFIG_BMI08X=m
+CONFIG_BOSCH_DRIVER_LOG_FUNC=y
 CONFIG_HID_SENSOR_ACCEL_3D=y
 CONFIG_GUC_ADC=y
 CONFIG_HID_SENSOR_GYRO_3D=y
