--- a/arch/arm64/boot/dts/hobot/x5-memory.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5-memory.dtsi
@@ -78,7 +78,7 @@
 			ecc-size = <0x0>;
 		};
 
-		linux,cma2@95000000 {
+		isp_cma: linux,cma2@95000000 {
 			compatible = "shared-dma-pool";
 			reg = <0x0 0x95000000 0x0 0x0C800000>; /* 200MB */
 			reusable;
@@ -107,4 +107,8 @@
 		 * please reserve with CAUTION!
 		 */
 	};
+};
+
+&isp {
+	memory-region = <&isp_cma>;
 };
