--- a/arch/arm64/boot/dts/hobot/x5.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5.dtsi
@@ -4635,4 +4635,21 @@
 		status = "disabled";
 		compatible = "hobot,hobot-ipc-hal";
 	};
+
+	__overrides__ {
+		uart0 = <&uart0>,"status";
+		uart1 = <&uart1>,"status";
+		uart5 = <&uart5>,"status";
+		spi1 = <&spi1>,"status";
+		spi5 = <&spi5>,"status";
+		i2c0 = <&i2c0>,"status";
+		i2c2 = <&i2c2>,"status";
+		i2c3 = <&i2c3>,"status";
+		i2c4 = <&i2c4>,"status";
+		i2c5 = <&i2c5>,"status";
+		i2c6 = <&i2c6>,"status";
+		i2c7 = <&i2c7>,"status";
+		dw_i2s0 = <&dw_i2s0>,"status";
+		dw_i2s1 = <&dw_i2s1>,"status";
+	};
 };
