feat(srpi-config): Add interface initialization,for srpi-config
Signed-off-by: xin03.liu <xin03.liu@horizon.cc>

--- a/arch/arm64/boot/dts/hobot/x5.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5.dtsi
@@ -54,6 +54,12 @@
 		spi5 = &spi5;
 		spi6 = &spi6;
 		spi7 = &qspi;
+		pwm0 = &pwm0;
+		pwm1 = &pwm1;
+		pwm2 = &pwm2;
+		pwm3 = &pwm3;
+		i2s0 = &dw_i2s0;
+		i2s1 = &dw_i2s1;
 
 		mmc0 = &emmc;
 		mmc1 = &sdio_0;
